# dunetpc

./: protodune_v7_outer0.5cm.gdml  protodune_v7_outer0.5cm_nowires.gdml  protodune_v7_outer1cm.gdml  protodune_v7_outer1cm_nowires.gdml
dune/BeamData/: CMakeLists.txt  protoDUNEBeam.cxx  protoDUNEBeam.h
dune/BeamData/ProtoDUNEBeamSpill/: CMakeLists.txt  ProtoDUNEBeamSpill.cxx  ProtoDUNEBeamSpill.h  classes.h  classes_def.xml
dune/DAQSimAna/: AlgParts.h  CMakeLists.txt  CalibrationTree.fcl  CalibrationTree.h  CalibrationTreeBuilder.fcl  CalibrationTreeBuilder.h  CalibrationTreeBuilder_module.cc  CalibrationTree_module.cc  DAQQuickClustering.fcl  DAQQuickClustering_module.cc  DAQQuickClustering_module.h  DAQSimAna.fcl  DAQSimAna_module.cc  DataHit_module.cc  PackedDump_module.cc  TriggerPrimitiveFinderPass1.h  TriggerPrimitiveFinderPass1_service.cc  TriggerPrimitiveFinderPass1_tool.cc  TriggerPrimitiveFinderPass2_tool.cc  TriggerPrimitiveFinderService.h  TriggerPrimitiveFinderTemplate_service.cc  TriggerPrimitiveFinderTemplate_tool.cc  TriggerPrimitiveFinderTool.h  TriggerPrimitiveFinder_module.cc  WaveformAndSimChannelDump_module.cc  WaveformDump_module.cc  WaveformPDSAndTruthDump_module.cc  WaveformsToTree_module.cc  addnoise_and_dump.fcl  addnoise_findprim_daqsimanas.fcl  addnoise_findprim_daqsimanas_noise150pc.fcl  addnoise_findprim_daqsimanas_noise2x.fcl  addnoise_findprim_daqsimanas_noise4x.fcl  addnoise_fromsimch_findprim_daqsimanas.fcl  addnonoise_findprim_daqsimanas.fcl  addnonoise_fromsimch_findprim_daqsimanas.fcl  daqquickclustering_job.fcl  daqsimana_job.fcl  daqsimana_job_plus_findtrigprim.fcl  daqsimana_job_plus_findtrigprim_fromwaveform.fcl  (+25 more)
dune/DAQSimAna/ChannelClusteringTrigger/: SNAna_module.cc
dune/DAQSimAna/RunningSumHitFinder/: CMakeLists.txt  RunningSum.fcl  RunningSumTPFinderPass1.h  RunningSumTPFinderPass1_tool.cc  RunningSumTPFinderPass2.h  RunningSumTPFinderPass2_tool.cc  RunningSumTPFinderPass3.h  RunningSumTPFinderPass3_tool.cc  RunningSumTPFinderPass4.h  RunningSumTPFinderPass4_tool.cc  RunningSumTPFinderTool.h  RunningSumTPFinder_module.cc
dune/DAQSimAna/SNAnaClustering/: CMakeLists.txt  SNAna.fcl  SNAna_module.cc  addnoise_findprim1400_snana.fcl  addnoise_findprim_frugalped_snanas.fcl  addnoise_findprim_frugalped_snanas_noise150pc.fcl  addnoise_findprim_snanas.fcl  addnoise_findprim_snanas_downsample2.fcl  addnoise_findprim_snanas_downsample4.fcl  addnoise_findprim_snanas_frugalped_nofilter.fcl  snana_job.fcl  (+16 more)
dune/DuneExample/: CMakeLists.txt  MyClass.cxx  MyClass.h  classes.h  classes_def.xml
dune/NearlineMonitor/: CMakeLists.txt  NearlineAna_module.cc  NearlineSummariser.cxx  NearlineVersion.h  TPCHits_module.cc  nearline_muoncounter35t.fcl  standard_nearline35t.fcl  standard_nearline35t_mc.fcl  standard_splitter_nearline35t.fcl  test_daqtooffline_nearlineana.fcl  test_nearlineana.fcl  test_stitcher_nearlineana.fcl
dune/RunHistory/: CMakeLists.txt  DetPedestalDUNE.cxx  DetPedestalDUNE.h  RunHistoryDUNE.cxx  RunHistoryDUNE.h  RunInfoDUNE.cc  getDUNEPedestals.cc  peds2.txt  sc_channels.csv
dune/daqinput35t/: BadTimings_module.cc  BuildSSPChannelMap.py  CMakeLists.txt  CheckRawDigit_module.cc  CheckTime.cc  CheckTime.h  CheckTiming.fcl  CheckTiming_module.cc  DuneTimeConverter.cxx  DuneTimeConverter.h  FilterAnalyzer.fcl  FilterAnalyzerRunList_module.cc  FilterAnalyzer_module.cc  FilterWF_module.cc  GoodRun.fcl  GoodRun_module.cc  NoiseCorrelation_module.cc  PTBToOffline.fcl  PTBToOffline_module.cc  PennToOffline.cc  PennToOffline.h  RunDAQToOffline.fcl  RunGoodRun.fcl  RunPTBToOffline.fcl  RunSSPTests.fcl  RunSSPToOffline.fcl  RunSSPToOfflineAnalyze.fcl  RunSSPToOfflineDiagnostic.fcl  RunSSPToOffline_debug.fcl  RunSplitterDefault.fcl  RunSplitterDefault_MC.fcl  RunTimingCheck.fcl  RunTpcDAQToOffline.fcl  SSPDiagnosticAna_module.cc  SSPDump_module.cc  SSPEventDump.fcl  SSPFragmentToOpDetWaveform.cc  SSPFragmentToOpDetWaveform.h  SSPReformatterAlgs.cc  SSPReformatterAlgs.h  (+17 more)
lbne/EMshower3D/: CMakeLists.txt  EMShower3D_module.cc
lbne/Geometry/: CMakeLists.txt  ChannelMap35Alg.cxx  ChannelMap35Alg.h  ChannelMap35OptAlg.cxx  ChannelMap35OptAlg.h  ChannelMap35OptAlg.h~  ChannelMapAPAAlg.cxx  ChannelMapAPAAlg.h  CheckGeometry_module.cc  GeoObjectSorter35.cxx  GeoObjectSorter35.h  GeoObjectSorterAPA.cxx  GeoObjectSorterAPA.h  LBNEGeometryHelper.h  LBNEGeometryHelper_service.cc  MuonCounter35Alg.cxx  MuonCounter35Alg.h  checkwires.fcl  geometry_lbne.fcl  geotest.fcl  muoncounters.txt
lbne/LBNEPandora/: CMakeLists.txt  LBNE35tGeometryHelper.cxx  LBNE35tGeometryHelper.h  LBNE35tPandora_module.cc  LBNE35tParticleStitcher_module.cc  LBNE35tPseudoLayerPlugin.cxx  LBNE35tPseudoLayerPlugin.h  LBNE35tTransformationPlugin.cxx  LBNE35tTransformationPlugin.h  LBNE4APAGeometryHelper.cxx  LBNE4APAGeometryHelper.h  LBNE4APAPandora_module.cc  LBNE4APAPseudoLayerPlugin.cxx  LBNE4APAPseudoLayerPlugin.h  LBNE4APATransformationPlugin.cxx  LBNE4APATransformationPlugin.h  pandoramodules_lbne.fcl  runpandora_lbne35t.fcl
lbne/Utilities/: CMakeLists.txt  FileCatalogMetadataLBNE_service.cc  SignalShapingServiceLBNE10kt.h  SignalShapingServiceLBNE10kt_service.cc  SignalShapingServiceLBNE34kt.h  SignalShapingServiceLBNE34kt_service.cc  SignalShapingServiceLBNE35t.h  SignalShapingServiceLBNE35t_service.cc  databaseutil_lbne.fcl  detectorproperties_lbne.fcl  evd_lbne10kt.fcl  evd_lbne34kt.fcl  evd_lbne35t.fcl  evd_lbne35t_milliblock.fcl  evdservices_lbne.fcl  larfft_lbne.fcl  larproperties_lbne.fcl  minimal_reco_lbne35t.fcl  sam_lbne.fcl  seedservice_lbne.fcl  services_lbne.fcl  signalservices_lbne.fcl  standard_reco_lbne35t.fcl  standard_reco_lbnefd.fcl  timeservice_lbne.fcl
lbne/daqinput35t/: CMakeLists.txt  RunDAQToOffline.fcl  RunSSPToOffline.fcl  RunTpcDAQToOffline.fcl  SSPDump_module.cc  SSPFragmentToOpDetWaveform.cc  SSPFragmentToOpDetWaveform.h  SSPToOffline.fcl  SSPToOffline_module.cc  SplitterInput_source.cc  TpcDAQToOffline.fcl  TpcDAQToOffline_module.cc  TpcMilliSliceDump_module.cc  TpcRceEventDump.fcl  tpcFragmentToRawDigits.cc  tpcFragmentToRawDigits.h
(+1707 files in other folders)
