include_directories( ${CMAKE_CURRENT_SOURCE_DIR} )

ADD_SUBDIRECTORY(lbne-raw-data)
ADD_SUBDIRECTORY(utilities)

simple_plugin(TpcMilliSliceDump "module"
lbne_daqinput35t_lbne-raw-data_Overlays
Geometry_service
Geometry
RawData
${SIMULATIONBASE}
${ART_FRAMEWORK_CORE}
${ART_FRAMEWORK_PRINCIPAL}
${ART_FRAMEWORK_SERVICES_REGISTRY}
${ART_FRAMEWORK_SERVICES_OPTIONAL}
${ART_FRAMEWORK_SERVICES_OPTIONAL_TFILESERVICE_SERVICE}
${ART_FRAMEWORK_SERVICES_OPTIONAL_RANDOMNUMBERGENERATOR_SERVICE}
${ART_PERSISTENCY_COMMON}
${ART_PERSISTENCY_PROVENANCE}
${ART_UTILITIES}
${MF_MESSAGELOGGER}
${MF_UTILITIES}
${CETLIB}
${ROOT_BASIC_LIB_LIST}
)

simple_plugin(SSPDump "module"
lbne_daqinput35t_lbne-raw-data_Overlays
Geometry_service
Geometry
RawData
${SIMULATIONBASE}
${ART_FRAMEWORK_CORE}
${ART_FRAMEWORK_PRINCIPAL}
${ART_FRAMEWORK_SERVICES_REGISTRY}
${ART_FRAMEWORK_SERVICES_OPTIONAL}
${ART_FRAMEWORK_SERVICES_OPTIONAL_TFILESERVICE_SERVICE}
${ART_FRAMEWORK_SERVICES_OPTIONAL_RANDOMNUMBERGENERATOR_SERVICE}
${ART_PERSISTENCY_COMMON}
${ART_PERSISTENCY_PROVENANCE}
${ART_UTILITIES}
${MF_MESSAGELOGGER}
${MF_UTILITIES}
${CETLIB}
${ROOT_BASIC_LIB_LIST}
)

simple_plugin(SSPToOffline "module"
lbne_daqinput35t_lbne-raw-data_Overlays
Geometry_service
Geometry
RawData
${SIMULATIONBASE}
${ART_FRAMEWORK_CORE}
${ART_FRAMEWORK_PRINCIPAL}
${ART_FRAMEWORK_SERVICES_REGISTRY}
${ART_FRAMEWORK_SERVICES_OPTIONAL}
${ART_FRAMEWORK_SERVICES_OPTIONAL_TFILESERVICE_SERVICE}
${ART_FRAMEWORK_SERVICES_OPTIONAL_RANDOMNUMBERGENERATOR_SERVICE}
${ART_PERSISTENCY_COMMON}
${ART_PERSISTENCY_PROVENANCE}
${ART_UTILITIES}
${MF_MESSAGELOGGER}
${MF_UTILITIES}
${CETLIB}
${ROOT_BASIC_LIB_LIST}
)

simple_plugin(TpcDAQToOffline "module"
lbne_daqinput35t_lbne-raw-data_Overlays
lbne_daqinput35t_utilities
Geometry_service
Geometry
RawData
${SIMULATIONBASE}
${ART_FRAMEWORK_CORE}
${ART_FRAMEWORK_PRINCIPAL}
${ART_FRAMEWORK_SERVICES_REGISTRY}
${ART_FRAMEWORK_SERVICES_OPTIONAL}
${ART_FRAMEWORK_SERVICES_OPTIONAL_TFILESERVICE_SERVICE}
${ART_FRAMEWORK_SERVICES_OPTIONAL_RANDOMNUMBERGENERATOR_SERVICE}
${ART_PERSISTENCY_COMMON}
${ART_PERSISTENCY_PROVENANCE}
${ART_UTILITIES}
${MF_MESSAGELOGGER}
${MF_UTILITIES}
${CETLIB}
${ROOT_BASIC_LIB_LIST}
)



install_fhicl()
install_source()
install_headers()
